--- a/src/App.css
+++ b/src/App.css
@@ -14,10 +14,10 @@ body,
   height: 100%;
   overflow-x: hidden;
 }
-
-/* * {
+/* 
+ * {
   outline: 1px solid rgba(255, 0, 0, 0.3);
-} */
+}  */
 
 .logo {
   height: 6em;
